[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://1914_Miljacka_Sarajevo.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 55
outline_size = 3
outline_color = Color( 0.898039, 0.113725, 0.113725, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0.890196, 0.0980392, 0.0980392, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 800.0
margin_bottom = 900.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Most" type="TextureRect" parent="."]
anchor_left = 0.107
anchor_right = 0.167
margin_left = -524.6
margin_top = -125.0
margin_right = 1131.4
margin_bottom = 900.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -103.409
margin_right = 385.0
margin_bottom = 46.5907
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Przy moście w Sarajewie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -98.4126
margin_top = -200.0
margin_right = 101.587
margin_bottom = -100.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.858824, 0.117647, 0.117647, 1 )
text = "Rozpocznij"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 11.0
one_shot = true

[node name="InfoLabel" type="Label" parent="."]
anchor_left = 0.05
anchor_top = 0.437
anchor_right = 1.0
anchor_bottom = 0.778
margin_top = -0.300018
margin_bottom = -0.200073
custom_fonts/font = SubResource( 3 )
text = "28 czerwca 1914 roku.

Do Sarajewa przybyć ma z wizytacją arcyksiążę Franciszek Ferdynand.
Pociąg z następcą austro-węgierskiego tronu dociera do miasta o 10:07.
Na miejscu arcyksiążę wraz z małżonką przesiadają się do limuzyny,
której towarzyszy pięć innych pojazdów.

O godzinie 10:26 kolumna zbliża się do Mostu Ćumurija."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndLabel" type="Label" parent="."]
anchor_left = 0.05
anchor_top = 0.437
anchor_right = 1.0
anchor_bottom = 0.778
margin_top = -0.300018
margin_bottom = -0.200073
custom_fonts/font = SubResource( 4 )
text = "Franciszek Ferdynand zginął w zamachu. W Europie już od pewnego
czasu przeczuwano nadciągający kryzys. Śmierć arcyksięcia dała
mocarstwom pretekst do działania i doprowadziła do eskalacji konfliktu.

Wybuchła I wojna światowa."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skip" type="Button" parent="."]
anchor_left = 0.377
anchor_top = 0.778
anchor_right = 0.627
anchor_bottom = 0.888
margin_left = -0.0126038
margin_top = -0.200073
margin_right = -0.0126343
margin_bottom = -0.200073
custom_fonts/font = SubResource( 5 )
text = "Pomiń"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="Skip" to="." method="_on_Skip_pressed"]
